Fix slider scrollbar hover effect
This will make the slider scrollbar track mantain it's hover effect if the thumb is being grabbed, even while not being actually hovered on.

--- a/src/style.css
+++ b/src/style.css
@@ -330,7 +330,8 @@ h3 {
   border-radius: 4px;
 }
 
-.slider-scrollbar .scrollbar-track:hover {
+.slider-scrollbar .scrollbar-track:hover,
+.slider-scrollbar .scrollbar-track:has(.scrollbar-thumb:active) {
   height: 4px;
 }
 
